[gd_scene load_steps=16 format=3 uid="uid://dcblllx72cd53"]

[ext_resource type="Texture2D" uid="uid://cbnhdmxantoom" path="res://assets/ui/Popup Settings.png" id="1_ha4bm"]
[ext_resource type="Script" uid="uid://dhtdkd38k55dp" path="res://GameStarter/accverificationpop.gd" id="1_nbojv"]
[ext_resource type="FontFile" uid="uid://dui23xil84umq" path="res://assets/fonts/porter-sans-inline-block-webfont.ttf" id="2_auh1l"]

[sub_resource type="LabelSettings" id="LabelSettings_r7m2g"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhert"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 1, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xfelb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygsmg"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kshx0"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vcug5"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sd8w"]
bg_color = Color(0.0117647, 0.729412, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4hek"]
bg_color = Color(0.0117647, 0.729412, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heius"]
bg_color = Color(0.870588, 0, 0, 1)
draw_center = false
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vh46"]
bg_color = Color(0.870387, 2.88785e-07, 1.2514e-06, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bfq7"]
bg_color = Color(0.870588, 0, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5bim"]
bg_color = Color(0.215686, 0.729412, 0, 1)
corner_radius_top_left = 65
corner_radius_top_right = 65
corner_radius_bottom_right = 65
corner_radius_bottom_left = 65

[node name="Accverificationpop" type="Node2D"]
script = ExtResource("1_nbojv")

[node name="PopupAccverification" type="Sprite2D" parent="."]
position = Vector2(568, 324)
scale = Vector2(1, 0.810226)
texture = ExtResource("1_ha4bm")

[node name="Label" type="Label" parent="."]
offset_left = 289.0
offset_top = 108.0
offset_right = 851.0
offset_bottom = 257.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_auh1l")
theme_override_font_sizes/font_size = 40
text = "account 
verification"
label_settings = SubResource("LabelSettings_r7m2g")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 157.0
offset_top = 288.0
offset_right = 976.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Enter code that we have sent to your email"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 349.0
offset_top = 351.0
offset_right = 771.0
offset_bottom = 420.0
alignment = 1

[node name="LineEdit1" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="LineEdit4" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="LineEdit5" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="LineEdit6" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_fhert")
theme_override_styles/normal = SubResource("StyleBoxFlat_xfelb")
alignment = 1

[node name="SubmitBtn" type="Button" parent="."]
offset_left = 481.0
offset_top = 469.0
offset_right = 628.0
offset_bottom = 518.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_ygsmg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kshx0")
theme_override_styles/hover = SubResource("StyleBoxFlat_vcug5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1sd8w")
theme_override_styles/normal = SubResource("StyleBoxFlat_v4hek")
text = "Submit"

[node name="resend code" type="Button" parent="."]
offset_left = 494.0
offset_top = 543.0
offset_right = 614.0
offset_bottom = 583.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxFlat_heius")
theme_override_styles/disabled = SubResource("StyleBoxFlat_1vh46")
theme_override_styles/hover = SubResource("StyleBoxFlat_0bfq7")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5bim")
text = "Resend Code"

[node name="Timer" type="Timer" parent="."]

[node name="CooldownLabel" type="Label" parent="."]
offset_left = 629.0
offset_top = 545.0
offset_right = 681.0
offset_bottom = 580.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25

[connection signal="pressed" from="SubmitBtn" to="." method="_on_submit_btn_pressed"]
[connection signal="pressed" from="resend code" to="." method="_on_resend_code_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
